[metadata]
name = envpool
version = 0.8.2
author = "EnvPool Contributors"
author_email = "sail@sea.com"
description = "C++-based high-performance parallel environment execution engine (vectorized env) for general RL environments."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sail-sg/envpool
project_urls =
    Bug Tracker = https://github.com/sail-sg/envpool/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.7
install_requires =
    dm-env>=1.4
    gym>=0.18
    gymnasium>=0.26
    numpy>=1.19
    types-protobuf>=3.17.3
    typing-extensions
    packaging
    optree>=0.6.0

[options.packages.find]
include = envpool*

[options.package_data]
envpool =
    **/*_envpool.so
    atari/roms/*.bin
    mujoco/*.so.*
    mujoco/assets*/**/*.xml
    procgen/assets/**/*.png
    vizdoom/bin/*
    vizdoom/maps/*

[yapf]
based_on_style = yapf
spaces_before_comment = 2
dedent_closing_brackets = true
column_limit = 80
continuation_indent_width = 2

[flake8]
exclude =
    .git
indent_size = 2
extend-ignore = B024
max-line-length = 80

[pydocstyle]
convention = google

[isort]
profile = black
multi_line_output = 3
indent = 2
line_length = 80

[mypy]
allow_redefinition = True
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
ignore_missing_imports = True
no_implicit_optional = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True

[doc8]
max-line-length = 250
